# AdventOfCode

./: .clang-tidy  .gitignore  CMakeLists.txt  adapter_array.cpp  adapter_arrays_test.cpp  binary_boarding.cpp  catch-test-main.cpp  custom_customs.cpp  depth_first_search.cpp  depth_first_search.h  docking.cpp  docking.h  docking_data.cpp  docking_tests.cpp  encoding_error.cpp  handheld_halting.cpp  handy_haversacks.cpp  line.cpp  line.h  line_test.cpp  passport_processing.cpp  password_philosophy.cpp  rain_risk.cpp  report_repair.cpp  seating_system.cpp  toboggan_trajectory.cpp
conan-build/: conanbuildinfo.cmake
